--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,8 +26,8 @@
       <button type="submit" class="btn-submit" disabled>Se connecter</button>
     </form>
   </div>
-  <script src="../js/env-config.js?ts=<?= Date.now() ?>"></script>
-  <script type="module" src="../js/login.js"></script>
+  <script src="./js/env-config.js"></script>
+  <script type="module" src="./js/login.js"></script>
 
 </body>
 </html>
