--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Connexion - Kino Caen</title>
+  <title>Connexion - Costumerie</title>
   <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./pages/styles.css">
 </head>
@@ -10,7 +10,7 @@
 
   <div class="login-container">
     <img src="images/bandeau_kinocaen.png" alt="Bandeau KinoCaen" class="bandeau-img" />
-    <div class="login-title">Page de connexion au site de gestion de production de Kino Caen</div>
+    <div class="login-title">Page de connexion à la base de gestion d'inventaire</div>
 
     <form class="login-form" id="login-form">
       <input type="text" id="email" placeholder="Email" required>
