--- a/prototypage/snippet_inventaire.html
+++ b/prototypage/snippet_inventaire.html
@@ -152,24 +152,35 @@ body {
   color: #fff;
 }
 
-/* ---- Filtres internes ---- */
+
 .date-filters {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 6px;
-  margin-top: 8px;
+  margin: 8px 0;
 }
-.date-filters label {
+
+.date-row {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.date-row label {
+  width: 24px;           /* largeur fixe pour bien aligner les labels */
   font-size: 0.85em;
   color: #333;
+  text-align: right;
 }
-.date-filters input[type="date"] {
+
+.date-row input[type="date"] {
+  flex: 1;
   padding: 4px 6px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 6px;
   font-size: 0.9em;
-  background: #f9f9f9;
 }
+
 
 </style>
 </head>
@@ -188,11 +199,16 @@ body {
   <hr style="margin:10px 0; border:none; border-top:1px solid #ddd;">
   <div><strong>Période</strong></div>
   <div class="date-filters">
-    <label for="filterStartDate">Du :</label>
-    <input type="date" id="filterStartDate">
-    <label for="filterEndDate">au :</label>
-    <input type="date" id="filterEndDate">
+    <div class="date-row">
+      <label for="filterStartDate">Du</label>
+      <input type="date" id="filterStartDate">
+    </div>
+    <div class="date-row">
+      <label for="filterEndDate">Au</label>
+      <input type="date" id="filterEndDate">
+    </div>
   </div>
+
 </aside>
 
 <!-- Zone principale -->
