--- a/prototypage/collection.html
+++ b/prototypage/collection.html
@@ -7,7 +7,7 @@
 </head>
 <body class="cstm-body">
 
-  <!-- ---- Sidebar Filtres ---- -->
+  <!-- Sidebar Filtres -->
   <aside id="cstm-filtersSidebar" class="cstm-collapsed">
     <h3>Filtres</h3>
     <div><strong>Catégorie</strong></div>
@@ -31,22 +31,16 @@
     </div>
   </aside>
 
-  <!-- ---- Sidebar Panier ---- -->
+  <!-- Zone principale -->
+  <div id="cstm-main"></div>
+
+  <!-- Sidebar Panier -->
   <div id="cstm-cartSidebar" class="cstm-collapsed"></div>
 
-  <!-- ---- Zone principale ---- -->
-  <div id="cstm-main">
-    <!-- Mini bar horizontale centrée avec filtres et panier -->
-    <div id="cstm-topControls">
-      <div id="cstm-filtersInline" class="cstm-inlineControls"></div>
-      <div id="cstm-cartInline" class="cstm-inlineControls"></div>
-    </div>
-  </div>
-
-  <!-- ---- Boutons flottants ---- -->
+  <!-- Boutons flottants -->
   <button id="cstm-filtersToggle" class="cstm-collapsed">🔍</button>
   <button id="cstm-cartToggle" class="cstm-collapsed">🛒</button>
 
-  <script type="module" src="./collection.js"></script>
+  <script src="./collection.js"></script>
 </body>
 </html>
