--- a/frontend/public/pages/booking_modal.html
+++ b/frontend/public/pages/booking_modal.html
@@ -21,7 +21,7 @@
         <div class="booking-org-referent-row">
           <div class="booking-org-select">
             <select id="organization" class="booking-select"></select>
-            <button id="addOrg" class="booking-btn-secondary">+ Ajouter / Modifier</button>
+            <button id="add-edit-organization-btn" class="booking-btn-secondary">+ Ajouter / Modifier</button>
           </div>
           <select id="referent" class="booking-select"></select>
         </div>
