--- a/frontend/public/pages/collection.html
+++ b/frontend/public/pages/collection.html
@@ -58,7 +58,9 @@
 
   <!-- ---- Boutons flottants ---- -->
   <button id="cstm-filtersToggle" class="cstm-collapsed">🔍</button>
+  <button id="cstm-orgToggle" class="cstm-collapsed">👥</button> 
   <button id="cstm-cartToggle" class="cstm-collapsed">🛒</button>
+
 
   <script type="module" src="./collection.js"></script>
 </body>
