--- a/frontend/public/pages/org_modal.html
+++ b/frontend/public/pages/org_modal.html
@@ -1,46 +1,49 @@
-<div id="org-modal" class="org-modal-overlay hidden">
-  <div class="org-modal-dialog">
-    <h2 class="org-modal-title">Nouvelle Organisation</h2>
+<div id="booking-modal" class="booking-modal-overlay hidden">
+<div class="org-modal-dialog">
+  <h2 class="booking-modal-title">Nouvelle réservation</h2>
 
-    <div class="org-form-grid">
+  <div class="booking-form-grid">
 
-      <!-- Nom -->
-      <div class="org-form-group">
-        <label for="organizationName">🏛️ Nom de l’organisation</label>
-        <input type="text" id="organizationName" class="org-input" />
-      </div>
+      <!-- Dates -->
+        <div class="booking-form-group">
+          <label for="startDate">📅 Date de début</label>
+          <input type="date" id="startDate" class="booking-input" />
+        </div>
 
-      <!-- Email -->
-      <div class="org-form-group">
-        <label for="organizationEmail">✉️ Email</label>
-        <input type="text" id="organizationEmail" class="org-input" />
-      </div>
+        <div class="booking-form-group">
+          <label for="endDate">📅 Date de fin</label>
+          <input type="date" id="endDate" class="booking-input" />
+        </div>
 
-      <!-- Téléphone -->
-      <div class="org-form-group">
-        <label for="organizationPhone">📞 Téléphone</label>
-        <input type="text" id="organizationPhone" class="org-input" />
-      </div>
+        <!-- Organisation & Référent -->
+        <div class="booking-form-group booking-form-group-full booking-org-line">
+          <label>🏛️ Organisation & Référent</label>
+          <div class="booking-org-referent-row">
+            <div class="booking-org-select">
+              <select id="organization" class="booking-select"></select>
+              <button id="add-edit-organization-btn" class="booking-btn-secondary">+ Ajouter / Modifier</button>
+            </div>
+            <select id="referent" class="booking-select"></select>
+          </div>
+        </div>
 
-      <!-- Privée -->
-      <div class="org-form-group">
-        <label>
-          <input type="checkbox" id="organizationPrivate" />
-          Privée
-        </label>
-      </div>
+        <!-- Prix -->
+        <div class="booking-form-group booking-form-group-full booking-price-container">
+          <label for="price">💰 Prix de location (€)</label>
+          <input type="number" id="price" class="booking-input" placeholder="0.00" min="0" step="0.01" />
+        </div>
 
-      <!-- Référents -->
-      <div class="org-form-group org-form-group-full">
-        <label for="referent">👤 Référent</label>
-        <select id="referent" class="org-select"></select>
-      </div>
+        <!-- Articles sélectionnés -->
+        <div class="booking-form-group booking-form-group-full">
+          <h3>🧺 Articles sélectionnés</h3>
+          <div class="booking-cart-items" id="booking-items"></div>
+        </div>
 
-      <!-- Actions -->
-      <div class="org-form-group org-form-group-full org-form-actions">
-        <button class="org-btn-secondary" id="cancel-org-btn">Annuler</button>
-        <button class="org-btn-primary" id="save-org-btn">Enregistrer</button>
-      </div>
+        <!-- Actions -->
+        <div class="booking-form-group booking-form-group-full booking-form-actions">
+          <button class="booking-btn-secondary" id="cancel-booking-btn">Annuler</button>
+          <button class="booking-btn-primary" id="validate-booking-btn">Valider la réservation</button>
+        </div>
 
     </div>
   </div>
