--- a/prototypage/snippet_organization.html
+++ b/prototypage/snippet_organization.html
@@ -4,107 +4,33 @@
 <meta charset="UTF-8">
 <title>Modal Organisation + Personnes</title>
 <style>
-body {
-  font-family: sans-serif;
-  margin: 0;
-  padding: 0;
-}
+body { font-family: sans-serif; margin: 0; padding: 0; }
 .org-modal-overlay {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100vw;
-  height: 100vh;
+  position: fixed; top: 0; left: 0;
+  width: 100vw; height: 100vh;
   background: rgba(0,0,0,0.4);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 2000;
+  display: flex; justify-content: center; align-items: center; z-index: 2000;
 }
 .org-modal-dialog {
-  background: #fff;
-  border-radius: 12px;
-  padding: 20px;
-  width: 900px;
-  max-width: 95%;
-  max-height: 90%;
-  overflow-y: auto;
+  background: #fff; border-radius: 12px; padding: 20px;
+  width: 900px; max-width: 95%; max-height: 90%; overflow-y: auto;
   box-shadow: 0 6px 20px rgba(0,0,0,0.2);
 }
-.org-section {
-  margin-bottom: 16px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 12px;
-}
-.org-section legend {
-  font-weight: bold;
-  padding: 0 6px;
-}
-.org-form-group {
-  margin-bottom: 10px;
-  display: flex;
-  flex-direction: column;
-}
-.org-form-group label {
-  font-weight: 500;
-  margin-bottom: 4px;
-}
-.org-form-group input,
-.org-form-group select {
-  padding: 6px 8px;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-}
-.org-form-actions {
-  display: flex;
-  justify-content: flex-end;
-  gap: 10px;
-  margin-top: 12px;
-}
-.org-btn-primary {
-  background: #4CAF50;
-  color: white;
-  border: none;
-  padding: 8px 14px;
-  border-radius: 6px;
-  cursor: pointer;
-}
-.org-btn-secondary {
-  background: #ddd;
-  color: #333;
-  border: none;
-  padding: 8px 14px;
-  border-radius: 6px;
-  cursor: pointer;
-}
-.person-list {
-  margin-top: 10px;
-}
+.org-section { margin-bottom: 16px; border: 1px solid #ddd; border-radius: 8px; padding: 12px; }
+.org-section legend { font-weight: bold; padding: 0 6px; }
+.org-form-group { margin-bottom: 10px; display: flex; flex-direction: column; }
+.org-form-group label { font-weight: 500; margin-bottom: 4px; }
+.org-form-group input, .org-form-group select { padding: 6px 8px; border: 1px solid #ccc; border-radius: 6px; }
+.org-form-actions { display: flex; justify-content: flex-end; gap: 10px; margin-top: 12px; }
+.org-btn-primary { background: #4CAF50; color: white; border: none; padding: 8px 14px; border-radius: 6px; cursor: pointer; }
+.org-btn-secondary { background: #ddd; color: #333; border: none; padding: 8px 14px; border-radius: 6px; cursor: pointer; }
+.person-list { margin-top: 10px; }
 .person-item {
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  padding: 8px;
-  margin-bottom: 6px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr auto;
-  gap: 6px;
-  align-items: center;
+  border: 1px solid #ccc; border-radius: 6px; padding: 8px; margin-bottom: 6px;
+  display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr auto; gap: 6px; align-items: center;
 }
-.person-item input,
-.person-item select {
-  width: 100%;
-  padding: 4px 6px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-.person-item button {
-  background: #e53935;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  padding: 4px 8px;
-  cursor: pointer;
-}
+.person-item input, .person-item select { width: 100%; padding: 4px 6px; border: 1px solid #ccc; border-radius: 4px; }
+.person-item button { background: #e53935; color: white; border: none; border-radius: 4px; padding: 4px 8px; cursor: pointer; }
 </style>
 </head>
 <body>
@@ -112,6 +38,14 @@ body {
 <div id="org-modal" class="org-modal-overlay">
   <div class="org-modal-dialog">
     <h2>Organisation</h2>
+
+    <fieldset class="org-section">
+      <legend>Sélection / Nouvelle Organisation</legend>
+      <div class="org-form-group">
+        <label for="organizationSelect">Organisation existante</label>
+        <select id="organizationSelect"><option value="">-- Nouvelle organisation --</option></select>
+      </div>
+    </fieldset>
 
     <fieldset class="org-section">
       <legend>Informations Organisation</legend>
@@ -131,8 +65,7 @@ body {
 
     <fieldset class="org-section">
       <legend>Personnes liées</legend>
-      <div id="personList" class="person-list">
-      </div>
+      <div id="personList" class="person-list"></div>
       <button type="button" id="addPersonBtn">Ajouter Personne</button>
     </fieldset>
 
@@ -144,58 +77,96 @@ body {
 </div>
 
 <script>
+// Mock des helpers
+function single(data) {
+  if (data == null) return null;
+  if (Array.isArray(data)) {
+    if (data.length === 0) return null;
+    if (data.length === 1) return data[0];
+    throw new Error(`Expected singleton but got ${data.length} elements`);
+  }
+  return data;
+}
+
+// Mock API
+async function fetchOrganizations() { return [{id:1,name:'Org A',referent_id:1,referent_first_name:'Alice',referent_last_name:'Dupont'}]; }
+async function fetchOrganizationReferents() { return [{id:1,first_name:'Alice',last_name:'Dupont'}]; }
+async function upsertOrganization(org) { console.log('upsertOrganization', org); return {...org,id:Math.random()}; }
+async function upsertPerson(p) { console.log('upsertPerson', p); return {id:Math.random(), ...p}; }
+
+// ---- Logique modal ----
+const orgSelect = document.getElementById('organizationSelect');
+const orgNameInput = document.getElementById('organizationName');
+const orgAddressInput = document.getElementById('organizationAddress');
+const orgReferentSelect = document.getElementById('organizationReferent');
 const personList = document.getElementById('personList');
 const addPersonBtn = document.getElementById('addPersonBtn');
 
-function createPersonItem() {
+let organizations = [];
+let referents = [];
+let selectedOrgId = null;
+
+function createPersonItem(person=null) {
   const div = document.createElement('div');
   div.className = 'person-item';
-
   div.innerHTML = `
-    <input type="text" placeholder="Nom" class="person-lastname" />
-    <input type="text" placeholder="Prénom" class="person-firstname" />
-    <input type="email" placeholder="Email" class="person-email" />
-    <input type="text" placeholder="Téléphone" class="person-phone" />
-    <input type="text" placeholder="Rôle" class="person-role" />
+    <input type="text" placeholder="Nom" class="person-lastname" value="${person?.last_name??''}" />
+    <input type="text" placeholder="Prénom" class="person-firstname" value="${person?.first_name??''}" />
+    <input type="email" placeholder="Email" class="person-email" value="${person?.email??''}" />
+    <input type="text" placeholder="Téléphone" class="person-phone" value="${person?.phone??''}" />
+    <input type="text" placeholder="Rôle" class="person-role" value="${person?.role??''}" />
     <button type="button" class="remove-person-btn">✕</button>
   `;
-
-  div.querySelector('.remove-person-btn').addEventListener('click', () => {
-    div.remove();
-  });
-
+  div.querySelector('.remove-person-btn').addEventListener('click', ()=>div.remove());
   return div;
 }
 
-addPersonBtn.addEventListener('click', () => {
-  personList.appendChild(createPersonItem());
+async function initModal() {
+  organizations = await fetchOrganizations();
+  referents = await fetchOrganizationReferents();
+  updateOrgSelect();
+  updateReferentSelect();
+}
+function updateOrgSelect() {
+  orgSelect.innerHTML = '<option value="">-- Nouvelle organisation --</option>';
+  organizations.forEach(o=>orgSelect.innerHTML += `<option value="${o.id}">${o.name}</option>`);
+}
+function updateReferentSelect() {
+  orgReferentSelect.innerHTML = '';
+  referents.forEach(r=>orgReferentSelect.innerHTML += `<option value="${r.id}">${r.first_name} ${r.last_name}</option>`);
+}
+
+orgSelect.addEventListener('change', ()=>{
+  const orgId = orgSelect.value;
+  selectedOrgId = orgId || null;
+  const org = organizations.find(o=>o.id==orgId);
+  if(org){
+    orgNameInput.value = org.name;
+    orgAddressInput.value = org.address||'';
+    orgReferentSelect.value = org.referent_id||'';
+  } else {
+    orgNameInput.value = '';
+    orgAddressInput.value = '';
+    orgReferentSelect.value = '';
+  }
 });
 
-// Bouton annuler
-document.getElementById('cancelOrgBtn').addEventListener('click', () => {
-  alert('Annuler modal (ici tu peux fermer le modal)');
+addPersonBtn.addEventListener('click', ()=>personList.appendChild(createPersonItem()));
+
+document.getElementById('cancelOrgBtn').addEventListener('click', ()=>alert('Annuler modal'));
+document.getElementById('saveOrgBtn').addEventListener('click', async ()=>{
+  const orgData = {
+    name: orgNameInput.value,
+    address: orgAddressInput.value,
+    referent_id: orgReferentSelect.value || null
+  };
+  const savedOrg = await upsertOrganization(orgData);
+  console.log('Organisation enregistrée', savedOrg);
+  alert('Organisation enregistrée, voir console');
+  await initModal();
 });
 
-// Bouton enregistrer
-document.getElementById('saveOrgBtn').addEventListener('click', () => {
-  const orgName = document.getElementById('organizationName').value;
-  const orgAddress = document.getElementById('organizationAddress').value;
-  const referentId = document.getElementById('organizationReferent').value;
-
-  const persons = [];
-  personList.querySelectorAll('.person-item').forEach(item => {
-    persons.push({
-      lastname: item.querySelector('.person-lastname').value,
-      firstname: item.querySelector('.person-firstname').value,
-      email: item.querySelector('.person-email').value,
-      phone: item.querySelector('.person-phone').value,
-      role: item.querySelector('.person-role').value
-    });
-  });
-
-  console.log({ orgName, orgAddress, referentId, persons });
-  alert('Voir console pour les données');
-});
+initModal();
 </script>
 
 </body>
