--- a/frontend/public/pages/org_modal.html
+++ b/frontend/public/pages/org_modal.html
@@ -1,50 +1,61 @@
-<div id="booking-modal" class="booking-modal-overlay hidden">
-<div class="org-modal-dialog">
-  <h2 class="booking-modal-title">Nouvelle réservation</h2>
+<div id="org-modal" class="org-modal-overlay hidden">
+  <div class="org-modal-dialog">
+    <h2 class="org-modal-title">Organisation</h2>
 
-  <div class="booking-form-grid">
+    <!-- Sélection / Nouvelle Organisation -->
+    <fieldset class="org-section org-choose-section">
+      <legend class="org-section-legend">Sélection / Nouvelle Organisation</legend>
+      <div class="org-form-group org-select-group">
+        <label for="organizationSelect" class="org-label">Organisation existante</label>
+        <select id="organizationSelect" class="org-select">
+          <option value="">-- Nouvelle organisation --</option>
+        </select>
+      </div>
+    </fieldset>
 
-      <!-- Dates -->
-        <div class="booking-form-group">
-          <label for="startDate">📅 Date de début</label>
-          <input type="date" id="startDate" class="booking-input" />
+    <!-- Informations Organisation -->
+    <fieldset class="org-section org-info-section">
+      <legend class="org-section-legend">Informations Organisation</legend>
+      <div class="org-form-group">
+        <label for="organizationName" class="org-label">Nom</label>
+        <input type="text" id="organizationName" class="org-input org-input-highlight" placeholder="Nom de l'organisation" />
+      </div>
+
+      <div class="org-form-group">
+        <label for="organizationAddress" class="org-label">Adresse</label>
+        <input type="text" id="organizationAddress" class="org-input org-input-highlight" placeholder="Adresse de l'organisation" />
+      </div>
+
+      <div class="org-form-group">
+        <label for="organizationReferent" class="org-label">Référent</label>
+        <select id="organizationReferent" class="org-select">
+          <option value="">-- Sélectionner --</option>
+        </select>
+      </div>
+
+    </fieldset>
+
+    <!-- Personnes liées -->
+    <fieldset class="org-section org-person-section">
+      <legend class="org-section-legend">Personnes liées</legend>
+      <div class="person-list" id="personList">
+        <div class="person-item">
+          <input type="text" class="person-lastname" placeholder="Nom" />
+          <input type="text" class="person-firstname" placeholder="Prénom" />
+          <input type="email" class="person-email" placeholder="Email" />
+          <input type="text" class="person-phone" placeholder="Téléphone" />
+          <input type="text" class="person-role" placeholder="Rôle" />
+          <button type="button" class="person-remove-btn">✕</button>
         </div>
+      </div>
+      <button type="button" class="person-add-btn">Ajouter Personne</button>
+    </fieldset>
 
-        <div class="booking-form-group">
-          <label for="endDate">📅 Date de fin</label>
-          <input type="date" id="endDate" class="booking-input" />
-        </div>
-
-        <!-- Organisation & Référent -->
-        <div class="booking-form-group booking-form-group-full booking-org-line">
-          <label>🏛️ Organisation & Référent</label>
-          <div class="booking-org-referent-row">
-            <div class="booking-org-select">
-              <select id="organization" class="booking-select"></select>
-              <button id="add-edit-organization-btn" class="booking-btn-secondary">+ Ajouter / Modifier</button>
-            </div>
-            <select id="referent" class="booking-select"></select>
-          </div>
-        </div>
-
-        <!-- Prix -->
-        <div class="booking-form-group booking-form-group-full booking-price-container">
-          <label for="price">💰 Prix de location (€)</label>
-          <input type="number" id="price" class="booking-input" placeholder="0.00" min="0" step="0.01" />
-        </div>
-
-        <!-- Articles sélectionnés -->
-        <div class="booking-form-group booking-form-group-full">
-          <h3>🧺 Articles sélectionnés</h3>
-          <div class="booking-cart-items" id="booking-items"></div>
-        </div>
-
-        <!-- Actions -->
-        <div class="booking-form-group booking-form-group-full booking-form-actions">
-          <button class="booking-btn-secondary" id="cancel-booking-btn">Annuler</button>
-          <button class="booking-btn-primary" id="validate-booking-btn">Valider la réservation</button>
-        </div>
-
+    <!-- Actions -->
+    <div class="org-form-actions">
+      <button type="button" class="org-btn org-btn-cancel">Annuler</button>
+      <button type="button" class="org-btn org-btn-save">Enregistrer</button>
     </div>
+
   </div>
 </div>
