--- a/frontend/public/pages/org_modal.html
+++ b/frontend/public/pages/org_modal.html
@@ -54,6 +54,7 @@
     <!-- Actions -->
     <div class="org-form-actions">
       <button type="button" class="org-btn org-btn-cancel">Annuler</button>
+      <button type="button" class="org-btn org-btn-delete">Supprimer</button>
       <button type="button" class="org-btn org-btn-save">Enregistrer</button>
     </div>
 
