--- a/frontend/public/pages/booking_modal.html
+++ b/frontend/public/pages/booking_modal.html
@@ -17,13 +17,12 @@
 
       <!-- Organisation & Référent -->
       <div class="booking-form-group booking-form-group-full booking-org-line">
-        <label>🏛️ Organisation & Référent</label>
+        <label>🏛️ Emprunnteur</label>
         <div class="booking-org-referent-row">
           <div class="booking-org-select">
             <select id="organization" class="booking-select"></select>
-            <button id="add-edit-organization-btn" class="booking-btn-secondary">+ Ajouter / Modifier</button>
           </div>
-          <select id="referent" class="booking-select"></select>
+          <select id="pickup_person" class="booking-select"></select>
         </div>
       </div>
 
