--- a/frontend/public/pages/collection.html
+++ b/frontend/public/pages/collection.html
@@ -39,8 +39,14 @@
           <label for="cstm-filterEndDate">Au</label>
           <input type="date" id="cstm-filterEndDate">
         </div>
+
+        <!-- Bouton placé à l’intérieur de la div date-filters -->
+        <div class="cstm-apply-filters">
+          <button id="cstm-applyDateFilter" type="button">Valider</button>
+        </div>
       </div>
     </div>
+
   </aside>
 
 
