--- a/frontend/public/pages/collection.html
+++ b/frontend/public/pages/collection.html
@@ -26,6 +26,15 @@
       <div id="cstm-styleChips" class="cstm-chip-list"></div>
     </div>
 
+    <div class="filter-section">
+      <div><strong>Genre</strong></div>
+      <div id="cstm-genderChips" class="cstm-chip-list">
+        <div class="filter-chip" data-gender="male">Homme</div>
+        <div class="filter-chip" data-gender="female">Femme</div>
+        <div class="filter-chip" data-gender="unisex">Unisexe</div>
+      </div>
+    </div>
+
     <hr class="cstm-divider">
 
     <div class="filter-section">
@@ -40,7 +49,6 @@
           <input type="date" id="cstm-filterEndDate">
         </div>
 
-        <!-- Bouton placé à l’intérieur de la div date-filters -->
         <div class="cstm-apply-filters">
           <button id="cstm-applyDateFilter" type="button">Valider</button>
         </div>
