--- a/frontend/public/pages/booking_modal.html
+++ b/frontend/public/pages/booking_modal.html
@@ -6,14 +6,15 @@
 
       <!-- Dates -->
       <div class="booking-form-group">
-        <label for="startDate">📅 Date de début</label>
-        <input type="date" id="startDate" class="booking-input" />
+        <label for="startDate">📅 Date et heure de début</label>
+        <input type="datetime-local" id="startDate" class="booking-input" />
       </div>
 
       <div class="booking-form-group">
-        <label for="endDate">📅 Date de fin</label>
-        <input type="date" id="endDate" class="booking-input" />
+        <label for="endDate">📅 Date et heure de fin</label>
+        <input type="datetime-local" id="endDate" class="booking-input" />
       </div>
+
 
       <!-- Organisation & Référent -->
       <div class="booking-form-group booking-form-group-full booking-org-line">
