--- a/frontend/public/pages/collection.html
+++ b/frontend/public/pages/collection.html
@@ -42,11 +42,11 @@
       <div class="cstm-date-filters">
         <div class="cstm-date-row">
           <label for="cstm-filterStartDate">Du</label>
-          <input type="date" id="cstm-filterStartDate">
+          <input type="datetime-local" id="cstm-filterStartDate">
         </div>
         <div class="cstm-date-row">
           <label for="cstm-filterEndDate">Au</label>
-          <input type="date" id="cstm-filterEndDate">
+          <input type="datetime-local" id="cstm-filterEndDate">
         </div>
 
         <div class="cstm-apply-filters">
