--- a/frontend/public/pages/inventory.html
+++ b/frontend/public/pages/inventory.html
@@ -19,11 +19,24 @@
     <table id="stock_table">
       <thead>
         <tr>
-          <th>Nom</th>
-          <th>Type</th>
-          <th>Propriétaire</th>
-          <th>Gestionnaire</th>
-          <th>Statut</th>
+          <thead>
+            <tr>
+              <th class="sortable">Nom</th>
+              <th class="sortable">Taille</th>
+              <th class="sortable">Description</th>
+              <th class="sortable">Genre</th>
+              <th class="sortable">Prix / jour</th>
+              <th class="sortable">Statut</th>
+              <th class="sortable">Qualité</th>
+              <th class="sortable">Catégorie</th>
+              <th class="sortable">Sous-catégorie</th>
+              <th>Styles</th>
+              <th>Photos</th>
+              <th>Editer</th>
+              <th>Supprimer</th>
+            </tr>
+          </thead>
+
         </tr>
       </thead>
       <tbody>
