--- a/frontend/public/pages/planning.html
+++ b/frontend/public/pages/planning.html
@@ -2,77 +2,57 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Planning des emprunts</title>
-  <link rel="stylesheet" href="./styles.css" /> <!-- Lien vers ton CSS global -->
+  <title>Planning des réservables</title>
+  <link rel="stylesheet" href="planning_reservables.css" />
 </head>
 <body>
 
-  <h1 id="title">Planning des emprunts de matériel</h1>
+  <h1>Planning des réservables</h1>
 
-  <!-- 🎛️ Filtres -->
-  <div class="form-grid">
-
-    <!-- Type de matériel -->
-    <div class="form-section">
-      <label for="filter_equipment_type">Type de matériel</label>
-      <select id="filter_equipment_type" name="filter_equipment_type" class="form-input">
-        <!-- Options ajoutées dynamiquement via JS -->
-      </select>
-    </div>
-
-    <!-- Filtre "nature" -->
-    <div class="form-section">
-      <label for="filter_equipment_status">Statut</label>
-      <select id="filter_equipment_status" name="filter_equipment_status" class="form-input">
-          <!-- Options ajoutées dynamiquement via JS -->
-      </select>
-    </div>
-    
-    <!-- Filtre "project" -->
-    <div class="form-section">
-      <label for="filter_project_status">Projet</label>
-        <select id="filter_project_status" name="filter_project_status" class="form-input">
-          <!-- Options ajoutées dynamiquement via JS -->
-        </select>
-    </div>
-    <div class="form-section">
-        <label for="lookup_equipment_name" class="form-label-left">Rechercher :</label>
-        <input type="text" id="lookup_equipment_name" name="lookup_equipment_name" class="form-input" required />
-    </div>
-    
-    <!-- Filtre tranches horaires -->
-       <div class="form-section">
-         <label for="filter-time-slot" class="emprunts-time-slot-label">par tranche horaire de:</label>
-         <select id="filter-time-slot" class="emprunts-select">
-           <option value="30">00:30</option>
-           <option value="60">1:00</option>
-           <option value="120">2:00</option>
-           <option value="240">4:00</option>
-         </select>
-         <button type="button" id="btn-recalculer">Recalculer le planning</button>
-      </div>
-  </div>
-
-
-  <!-- 📅 Planning -->
   <div class="boxed">
-    <div class="table-wrapper planning-wrapper" style="overflow-x:auto;"> <!-- Wrapper scroll horizontal -->
-      <div class="planning-now-indicator"></div> <!-- Trait rouge "maintenant" -->
-      <table id="planning-table">
+
+    <!-- 🔹 Barre de filtres -->
+    <div class="planning-filter-row">
+      <label for="filter-start">Début :</label>
+      <input type="datetime-local" id="filter-start" />
+
+      <label for="filter-end">Fin :</label>
+      <input type="datetime-local" id="filter-end" />
+
+      <label for="slot-granularity">Granularité :</label>
+      <select id="slot-granularity">
+        <option value="240">4h</option>
+        <option value="480">8h</option>
+        <option value="720">12h</option>
+        <option value="1440">1 jour</option>
+      </select>
+    </div>
+
+    <!-- 🔹 Barre de recherche -->
+    <div class="planning-filter-row">
+      <label for="search-item">Recherche :</label>
+      <input
+        type="text"
+        id="search-item"
+        placeholder="Nom de l'objet ou organisation..."
+        autocomplete="off"
+      />
+    </div>
+
+    <!-- 🔹 Wrapper pour scroll -->
+    <div class="planning-wrapper">
+      <table id="reservable-planning-table">
         <thead>
-          <tr>
-            <th rowspan="2">Matériel</th>
-            <!-- Colonnes jours (à remplir dynamiquement) -->
-          </tr>
-          <tr>
-            <!-- Heures par jour (à remplir dynamiquement) -->
-          </tr>
+          <!-- Généré dynamiquement via JS -->
         </thead>
         <tbody>
-          <!-- Corps du planning (à remplir dynamiquement) -->
+          <!-- Généré dynamiquement via JS -->
         </tbody>
       </table>
+      <div class="planning-now-indicator"></div>
     </div>
+
   </div>
+
 </body>
 </html>
