--- a/frontend/public/pages/collection.html
+++ b/frontend/public/pages/collection.html
@@ -63,7 +63,7 @@
   <!-- Lookup input -->
   <div id="cstm-lookupContainer" style="margin: 1em 0;">
     <label for="cstm-lookupInput"><strong>Recherche article :</strong></label>
-    <input type="text" id="cstm-lookupInput" placeholder="Tapez pour filtrer…">
+    <input type="text" id="cstm-lookupInput" placeholder="Tapez un mot-clef pour filtrer…">
   </div>
   <!-- ---- Zone principale ---- -->
   <div id="cstm-main">  </div>
