--- a/frontend/public/pages/booking.html
+++ b/frontend/public/pages/booking.html
@@ -51,6 +51,7 @@
             <th class="sortable">Début</th>
             <th class="sortable">Fin</th>
             <th class="sortable">Objets</th>
+            <th>Check-in / Check-out</th>
             <th>Éditer</th>
             <th>Supprimer</th>
           </tr>
