--- a/frontend/public/pages/booking.html
+++ b/frontend/public/pages/booking.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Réservations – Costumerie</title>
-  <link rel="stylesheet" href="../styles/pages/booking.css">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body class="booking-body">
 
@@ -41,7 +41,6 @@
 
   <!-- ---- Zone principale ---- -->
   <main id="booking-main">
-
     <div id="booking-table-wrapper">
       <table id="bookings_table">
         <thead>
@@ -61,9 +60,11 @@
         </tbody>
       </table>
     </div>
+    <!-- Conteneur pour footer / mini cart si besoin -->
+    <div id="booking-bottomContainer"></div>
   </main>
 
-  <!-- ---- Bouton toggle ---- -->
+  <!-- ---- Boutons flottants ---- -->
   <button id="booking-filtersToggle" class="booking-collapsed">🔍</button>
 
 </body>
