--- a/frontend/public/pages/booking_modal.html
+++ b/frontend/public/pages/booking_modal.html
@@ -1,58 +1,57 @@
-<div id="booking-modal" class="booking-modal-overlay hidden">
-  <div class="booking-modal-dialog">
-    <h2 class="booking-modal-title">Nouvelle réservation</h2>
+<dialog id="booking-modal" class="booking-modal-dialog">
 
-    <div class="booking-form-grid">
+  <h2 class="booking-modal-title">Nouvelle réservation</h2>
 
-      <!-- Dates -->
-      <div class="booking-form-group">
-        <label for="startDate">📅 Date et heure de début</label>
-        <input type="datetime-local" id="startDate" class="booking-input" />
-      </div>
+  <div class="booking-form-grid">
 
-      <div class="booking-form-group">
-        <label for="endDate">📅 Date et heure de fin</label>
-        <input type="datetime-local" id="endDate" class="booking-input" />
-      </div>
-
-
-      <!-- Organisation & Référent -->
-      <div class="booking-form-group booking-form-group-full booking-org-line">
-        <label>🏛️ Emprunteur</label>
-        <div class="booking-org-referent-row">
-          <div class="booking-org-select">
-            <select id="organization" class="booking-select"></select>
-          </div>
-          <select id="booking_person" class="booking-select"></select>
-        </div>
-      </div>
-
-      <!-- Prix -->
-      <div class="booking-form-group booking-form-group-full booking-price-container">
-        <label for="price">💰 Prix de location (€)</label>
-        <input type="number" id="price" class="booking-input" placeholder="0.00" min="0" step="0.01" />
-      </div>
-
-      <!-- Articles sélectionnés -->
-      <div class="booking-form-group booking-form-group-full">
-        <h3>🧺 Articles sélectionnés</h3>
-        <div class="booking-cart-items" id="booking-items"></div>
-      </div>
-
-      <!-- Option sortie immédiate -->
-      <div class="booking-form-group booking-form-group-full">
-        <label>
-          <input type="checkbox" id="immediate_checkout" />
-          Sortir le panier immédiatement
-        </label>
-      </div>
-
-      <!-- Actions -->
-      <div class="booking-form-group booking-form-group-full booking-form-actions">
-        <button class="booking-btn-secondary" id="cancel-booking-btn">Annuler</button>
-        <button class="booking-btn-primary" id="validate-booking-btn">Valider la réservation</button>
-      </div>
-
+    <!-- Dates -->
+    <div class="booking-form-group">
+      <label for="startDate">📅 Date et heure de début</label>
+      <input type="datetime-local" id="startDate" class="booking-input" />
     </div>
+
+    <div class="booking-form-group">
+      <label for="endDate">📅 Date et heure de fin</label>
+      <input type="datetime-local" id="endDate" class="booking-input" />
+    </div>
+
+    <!-- Organisation & Référent -->
+    <div class="booking-form-group booking-form-group-full booking-org-line">
+      <label>🏛️ Emprunteur</label>
+      <div class="booking-org-referent-row">
+        <div class="booking-org-select">
+          <select id="organization" class="booking-select"></select>
+        </div>
+        <select id="booking_person" class="booking-select"></select>
+      </div>
+    </div>
+
+    <!-- Prix -->
+    <div class="booking-form-group booking-form-group-full booking-price-container">
+      <label for="price">💰 Prix de location (€)</label>
+      <input type="number" id="price" class="booking-input" placeholder="0.00" min="0" step="0.01" />
+    </div>
+
+    <!-- Articles sélectionnés -->
+    <div class="booking-form-group booking-form-group-full">
+      <h3>🧺 Articles sélectionnés</h3>
+      <div class="booking-cart-items" id="booking-items"></div>
+    </div>
+
+    <!-- Option sortie immédiate -->
+    <div class="booking-form-group booking-form-group-full">
+      <label>
+        <input type="checkbox" id="immediate_checkout" />
+        Sortir le panier immédiatement
+      </label>
+    </div>
+
+    <!-- Actions -->
+    <div class="booking-form-group booking-form-group-full booking-form-actions">
+      <button class="booking-btn-secondary" id="cancel-booking-btn">Annuler</button>
+      <button class="booking-btn-primary" id="validate-booking-btn">Valider la réservation</button>
+    </div>
+
   </div>
-</div>
+
+</dialog>
