--- a/frontend/public/pages/batch_modal.html
+++ b/frontend/public/pages/batch_modal.html
@@ -24,9 +24,9 @@
       <thead>
         <tr>
           <th>Nom</th>
-          <th>Statut</th>
+          <th>Taille</th>
           <th>Checkin/Checkout</th>
-          <th>Supprimer</th>
+          <th>Retirer du lot</th>
         </tr>
       </thead>
       <tbody id="batch-tbody"></tbody>
