--- a/frontend/public/pages/booking_modal.html
+++ b/frontend/public/pages/booking_modal.html
@@ -32,6 +32,11 @@
         <label for="price">💰 Prix de location (€)</label>
         <input type="number" id="price" class="booking-input" placeholder="0.00" min="0" step="0.01" />
       </div>
+      
+      <div class="booking-form-group booking-form-group-full">
+        <label for="price">Description</label>
+        <input type="text" id="description" class="booking-input" placeholder="description du lot (optionnel)" />
+      </div>
 
       <!-- Articles sélectionnés -->
       <div class="booking-form-group booking-form-group-full">
