--- a/frontend/public/pages/reservable_modal.html
+++ b/frontend/public/pages/reservable_modal.html
@@ -9,7 +9,7 @@
 
 <div id="rsb-modal-reservable" class="rsb-modal">
   <div class="rsb-modal-content">
-    <h2>Éditer un objet</h2>
+    <h2 id="rsb-title">Éditer un objet</h2>
 
     <form id="rsb-form-reservable">
 
